fix text size / alignment

--- a/src/components/LocationAutocompleteInput/LocationAutocompleteInput.module.css
+++ b/src/components/LocationAutocompleteInput/LocationAutocompleteInput.module.css
@@ -136,6 +136,8 @@ bottom of the container.
   }
   .listItemWhiteText {
     color: var(--colorWhite);
+    font-size: 16px;
+    padding: 1rem 1rem 0;
     @media (--viewportMedium) {
       color: var(--colorLightTransparent);
     }
